# startinpy

./: .gitignore  .readthedocs.yaml  .travis.yml  CITATION.cff  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  README.rst  appveyor.yml  changelog.md  pyproject.toml  requirements.txt  setup.py
.github/workflows/: build.yml  publish.yml  sphinx.yml
data/: .gitignore  small.laz
demo/: add_normals.py  attributes.py  demo.py  demo2.py  demo3.py  duplicates.py  example_creating_dsm.py  example_exporting_flatgeobuf.py  example_exporting_geojson.py  example_exporting_meshio.py  example_gridding.py  example_matplotlib.py  example_polyscope.py  example_reading_geotiff.py  example_reading_laz.py  grid.py  remove_xy_duplicates.py  showcase.py  temp.py  view_rr.py
docs/: api.md  api.rst  attributes.md  comparison.md  conf.py  doc.md  examples.md  examples.rst  howitworks.md  howitworks.rst  index.md  index.rst  installation.md  installation.rst  issues.md  issues.rst  requirements.txt
dt_comparisons/: .gitignore  comparisons.py  download  readme.md  requirements.in  requirements.txt
paper/: paper.md  paper2.md  ref.bib
src/: lib.rs
startin/: __init__.py
startinpy/: __init__.py
tests/: requirements.in  requirements.txt  test_attributes.py  test_duplicates.py  test_init.py  test_interpolate.py  test_misc.py  test_output.py  test_remove.py  test_spatialextent.py  test_topology.py
travis/: travis
