[package]
name    = "startinpy"
version = "0.10.0-dev"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
homepage="https://github.com/hugoledoux/startinpy"
repository="https://github.com/hugoledoux/startinpy"
description = "A Delaunay triangulator for terrains"
readme = "README.md"
edition = "2021"


[dependencies]
startin = ">=0.6.1"
# startin = { path = "../startin" }
# startin = { git = "https://github.com/hugoledoux/startin", branch = "develop" }
las = { version = "~0.7", features = ["laz"] }
numpy = "~0.17"
rand = "0.8.5"


[dependencies.pyo3]
version = "~0.17.0"
features = ["extension-module"]


[lib]
name = "startinpy"
crate-type = ["cdylib"]


