[package]
name    = "startinpy"
version = "0.11.0-beta1"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
homepage="https://github.com/hugoledoux/startinpy"
repository="https://github.com/hugoledoux/startinpy"
description = "Modelling terrains with Delaunay triangulation"
readme = "README.md"
edition = "2021"


[dependencies]
# startin = "0.7.1"
# startin = { path = "../startin" }
startin = { git = "https://github.com/hugoledoux/startin", branch = "develop" }
numpy = "~0.17"
rand = "0.8.5"
geojson = "0.24"
serde = "1.0"
serde_json = "1.0"


[dependencies.pyo3]
version = "~0.17.0"
features = ["extension-module"]


[lib]
name = "startinpy"
crate-type = ["cdylib"]


