[package]
name    = "startinpy"
version = "0.11.1-beta1"
authors = ["Hugo Ledoux <h.ledoux@tudelft.nl>"]
license = "MIT"
homepage="https://github.com/hugoledoux/startinpy"
repository="https://github.com/hugoledoux/startinpy"
description = "Modelling terrains with Delaunay triangulation"
readme = "README.md"
edition = "2021"


[dependencies]
startin = "0.8.1"
# startin = { path = "../startin" }
# startin = { git = "https://github.com/hugoledoux/startin", branch = "develop" }
numpy = "0.19"
rand = "0.8.5"
geojson = "0.24"
serde = "1.0"
serde_json = "1.0"
bincode = "1.3.3"


[dependencies.pyo3]
version = "0.19.2"
features = ["extension-module"]


[lib]
name = "startinpy"
crate-type = ["cdylib"]


